--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  .navbar-item-active {
+    @apply underline decoration-solid decoration-4 underline-offset-8;
+  }
+  .navbar-item-inactive {
+  }
+}
